refactor: 로컬 시스템 폰트 우선적으로 사용하기

--- a/src/assets/styles/font.css
+++ b/src/assets/styles/font.css
@@ -3,7 +3,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: fallback;
-  src: url(../fonts/Inter/Inter-Regular-subset.woff2) format('woff2'),
+  src: local(Inter-Regular),
+    url(../fonts/Inter/Inter-Regular-subset.woff2) format('woff2'),
     url(../fonts/Inter/Inter-Regular-subset.woff) format('woff');
 }
 
@@ -12,7 +13,8 @@
   font-style: normal;
   font-weight: 500;
   font-display: fallback;
-  src: url(../fonts/Inter/Inter-Medium-subset.woff2) format('woff2'),
+  src: local(Inter-Medium),
+    url(../fonts/Inter/Inter-Medium-subset.woff2) format('woff2'),
     url(../fonts/Inter/Inter-Medium-subset.woff) format('woff');
 }
 
@@ -21,7 +23,8 @@
   font-style: normal;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/Inter/Inter-Bold-subset.woff2) format('woff2'),
+  src: local(Inter-Bold),
+    url(../fonts/Inter/Inter-Bold-subset.woff2) format('woff2'),
     url(../fonts/Inter/Inter-Bold-subset.woff) format('woff');
 }
 
@@ -29,7 +32,8 @@
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/NotoSans/NotoSansKR-Regular-subset.woff2) format('woff2'),
+  src: local(NotoSansKR-Regular),
+    url(../fonts/NotoSans/NotoSansKR-Regular-subset.woff2) format('woff2'),
     url(../fonts/NotoSans/NotoSansKR-Regular-subset.woff) format('woff');
 }
 
@@ -38,7 +42,8 @@
   font-style: normal;
   font-weight: 500;
   font-display: fallback;
-  src: url(../fonts/NotoSans/NotoSansKR-Medium-subset.woff2) format('woff2'),
+  src: local(NotoSansKR-Medium),
+    url(../fonts/NotoSans/NotoSansKR-Medium-subset.woff2) format('woff2'),
     url(../fonts/NotoSans/NotoSansKR-Medium-subset.woff) format('woff');
 }
 
@@ -47,6 +52,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/NotoSans/NotoSansKR-Bold-subset.woff2) format('woff2'),
+  src: local(NotoSansKR-Bold),
+    url(../fonts/NotoSans/NotoSansKR-Bold-subset.woff2) format('woff2'),
     url(../fonts/NotoSans/NotoSansKR-Bold-subset.woff) format('woff');
 }
